# high-precision

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  plot_conv_hist.m  plot_exec.m  run_exp.sh
doc/: README.md  api-reference.md  architecture.md  bailey-arithmetic-implementation.md  dependencies.md  development.md  examples.md  troubleshooting.md
include/bailey/: dd_arithmetic.hpp  dq_arithmetic.hpp  precision_traits.hpp  qx_arithmetic.hpp
include/io/: mat_exporter.hpp  mat_exporter_impl.hpp
include/linear_algebra/: conjugate_gradient.hpp
include/matrix_io/: matrix_market.hpp
interfaces/bailey_wrappers/: ddfun_cwrap.f90  dqfun_cwrap.f90  qxfun_cwrap.f90
src/: cg_solver.cpp  check_ldbl.cpp  dq_eps_and_sqrt2.f90  pi_check.f90  prec_sanity.cpp  precision_validation_test.cpp  qx_io_demo.f90  qxio.f90  simple_test.cpp
src/benchmarks/: test_basic.cpp
src/experiments/: main.cpp  nos5_cg.cpp  nos7_cg.cpp
